# aula08

./: app.py  pyproject.toml  schemas.py  test_app.py
tests/: conftest.py
